<resources>
    <string name="app_name">Hangman</string>
    <string name="result_text">Result</string>
    <string name="the_word_was">The word was</string>
    <string name="tries_left">Tries left</string>
    <string name="button_mainmenu">Main menu</string>
    <string name="button_game">Play game</string>
    <string name="button_about">About</string>
    <string name="current_word">Current word</string>
    <string name="turns_left">Turns left</string>
    <string name="guessed_letters">Guessed letters</string>
    <string name="button_guess">Guess</string>
    <string name="created_by">Created by Samantha Morrison</string>
    <string name="tool_play">Play</string>
    <string name="tool_info">About</string>

</resources>