<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.samanthamorrison.hangman.GameActivity">

    <ImageView
        android:id="@+id/murder_gear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:src="@drawable/hang10"/>

    <TextView
        android:id="@+id/current_word"
        android:layout_below="@+id/murder_gear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/current_word"
        android:textSize="30dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/turns_left"
        android:layout_below="@+id/current_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/turns_left"
        android:textSize="20dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/guessed_letters"
        android:layout_below="@+id/turns_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guessed_letters"
        android:textSize="20dp"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/group_input"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/guesses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="guess"
            android:text="@string/button_guess"/>

    </LinearLayout>

</RelativeLayout>